# promptaads-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  start.sh  stop.sh
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1d54f780f90f_add_image_url_to_ads.py  246a0cedc0a6_initial_schema.py
backend/api/: ads.py  analytics.py  auth.py  deps.py  engine.py
backend/core/: __init__.py  config.py  security.py
backend/db/: __init__.py  session.py
backend/engine/: __init__.py  ad_generator.py  ad_ranker.py  embedding_service.py  engine_service.py  matcher.py  vector_search.py  vector_store.py
backend/models/: __init__.py  ad.py  analytics.py  user.py
backend/schemas/: ad.py  analytics.py  auth.py  engine.py
backend/services/: ad.py  analytics.py  auth.py
backend/tests/: conftest.py  test_api.py  test_engine.py  test_schemas.py  test_services.py
conversational-ai-test/: .gitignore  README.md  package-lock.json  package.json
conversational-ai-test/src/app/: globals.css  layout.tsx  page.tsx
conversational-ai-test/src/app/api/ad/: route.ts
conversational-ai-test/src/app/api/analytics/: route.ts
conversational-ai-test/src/app/api/blend/: route.ts
conversational-ai-test/src/app/api/chat/: route.ts
docs/: ADVERTISER_GUIDE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  SETUP.md
examples/chatbot/: README.md
examples/chatbot/javascript/: index.ts
examples/chatbot/python/: main.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/ads/: page.tsx
frontend/src/app/dashboard/ads/new/: page.tsx
frontend/src/app/dashboard/analytics/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dropdown-menu.tsx  select.tsx
frontend/src/lib/: api.ts  auth-context.tsx
frontend/src/types/: index.ts
scripts/: seed.sh  setup.sh
sdk/js/: README.md  client.ts  index.ts  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/promptads_ai/: __init__.py  client.py
