[tool.poetry]
name = "promptads-backend"
version = "0.1.0"
description = "PromptAds AI - Backend API Server"
authors = ["PromptAds Contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "core"}, {include = "db"}, {include = "models"}, {include = "schemas"}, {include = "services"}, {include = "engine"}, {include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.18"
httpx = "^0.28.0"
openai = "^1.60.0"
qdrant-client = "^1.13.0"
structlog = "^24.4.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
aiosqlite = "^0.20.0"
ruff = "^0.9.0"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
